force-app/main/default/objects/DD_Product_Rule__c/DD_Product_Rule__c.object-meta.xml
<CustomObject>
    <description>Underwriting, eligibility, configuration, and adjudication rules</description>
    <label>Product Rule</label>
    <nameField><displayFormat>PR-{00000}</displayFormat><label>Rule ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>