force-app/main/default/objects/DD_Product_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>LongTextArea</type>
    <length>2000</length><visibleLines>3</visibleLines>
    <description>Action when condition is met</description>
</CustomField>