force-app/main/default/objects/DD_Product_Rule__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>LongTextArea</type>
    <length>5000</length><visibleLines>4</visibleLines>
    <description>Business rule condition logic</description>
</CustomField>