force-app/main/default/objects/DD_Product_Rule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Rules</relationshipLabel><relationshipName>Rules_Prod</relationshipName><required>false</required>
    <description>Specific product (null=all products)</description>
</CustomField>