force-app/main/default/objects/DD_Product_Rule__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>Descriptive rule name</description>
</CustomField>