force-app/main/default/objects/DD_Product_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Eligibility</fullName><default>false</default><label>Eligibility</label></value><value><fullName>Configuration</fullName><default>false</default><label>Configuration</label></value><value><fullName>Rating</fullName><default>false</default><label>Rating</label></value><value><fullName>Underwriting</fullName><default>false</default><label>Underwriting</label></value><value><fullName>Adjudication</fullName><default>false</default><label>Adjudication</label></value></valueSetDefinition></valueSet>
    <description>Type of rule</description>
</CustomField>