force-app/main/default/objects/DD_Product_Rule__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Small Business</fullName><default>false</default><label>Small Business</label></value><value><fullName>Individual</fullName><default>false</default><label>Individual</label></value><value><fullName>Mid-Market</fullName><default>false</default><label>Mid-Market</label></value><value><fullName>Large Group</fullName><default>false</default><label>Large Group</label></value><value><fullName>All</fullName><default>false</default><label>All</label></value></valueSetDefinition></valueSet>
    <description>Which segments this applies to (null=all)</description>
</CustomField>