force-app/main/default/objects/DD_Product_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Rule_Name__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>Segment__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Priority__c</columns>
</ListView>